stupid.css
/* ... */
/*** progress bar from http://codepen.io/holdencreative/details/pvxGxy  ***/
.progress {
  margin-left:-15px;
  margin-right:-15px;
  position:relative;
  height:8px;
  display:block;
  width:120%;
  background-color:#acece6;
  border-radius:0 !important;
  background-clip:padding-box;
  overflow:hidden;
}
.progress .determinate {
  position:absolute;
  background-color:inherit;
  top:0;
  bottom:0;
  background-color:#26a69a;
  transition:width .3s linear;
}
.progress .indeterminate {
  background-color:#26a69a;
}
.progress .indeterminate:before {
  content:'';
  position:absolute;
  background-color:inherit;
  top:0;
  left:0;
  bottom:0;
  will-change:left, right;
  animation:indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
}
.progress .indeterminate:after {
  content:'';
  position:absolute;
  background-color:inherit;
  top:0;
  left:0;
  bottom:0;
  will-change:left, right;
  animation:indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
  animation-delay:1.15s;
}
@-webkit-keyframes indeterminate {
  0% {left:-35%; right:100%}
  60% {left:100%; right:-90%}
  100% {left:100%; right:-90%}
}
@-moz-keyframes indeterminate {
  0% {left:-35%; right:100%}
  60% {left:100%; right:-90%}
  100% {left:100%; right:-90%}
}
@keyframes indeterminate {
  0% {left:-35%; right:100%}
  60% {left:100%; right:-90%}
  100% {left:100%; right:-90%}
}
@-webkit-keyframes indeterminate-short {
  0% {left:-200%; right:100%}
  60% {left:107%; right:-8%}
  100% {left:107%; right:-8%}
}
@-moz-keyframes indeterminate-short {
  0% {left:-200%; right:100%}
  60% {left:107%; right:-8%}
  100% {left:107%; right:-8%}
}
@keyframes indeterminate-short {
  0% {left:-200%; right:100%}
  60% {left:107%; right:-8%}
  100% {left:107%; right:-8%}
}

/**** dropdown menu from http://codepen.io/philhoyt/pen/ujHzd ***/
.menu {list-style:none; position:relative; margin:0; padding:0}
.menu.right {float:right}
.menu a {padding:0 15px; text-decoration:none;text-align:left;font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; text-align:left}
.menu li {position:relative; float:left; margin:0; padding:0}
.menu ul {background:white; border:1px solid #e1e1e1; visibility:hidden; opacity:0;  position:absolute; top:110%; padding:0; z-index:1000; transition:all 0.2s ease-out; list-style-type:none; box-shadow:5px 5px 10px #666}
.menu ul a {padding:10px 15px; color:#333; font-weight:700; font-size:12px; line-height:16px; display: block}
.menu ul li {float:none; width:200px}
.menu ul ul {top:0; left:80%; z-index:2000}
.menu li:hover > ul {visibility:visible; opacity:1}
.menu>li>ul>li:first-child:before{content:''; position:absolute; width:1px; height:1px; border:10px solid transparent; left:50px; top:-20px; margin-left:-10px; border-bottom-color:white}
.menu.dark ul {background:black; border:1px solid black}
.menu.dark ul a {color:white}
.menu.dark>li>ul>li:first-child:before{border-bottom-color:black}

@media (max-width:599px) {
  header .menu li, header .menu ul {width: 100%}  
  header .menu.right {float:left; text-align:left}
  header .menu ul ul {top:2.5em; left:-1px; z-index:2000}
}

@media (min-width:600px) {
  .ham {display:none!important}
  .burger.accordion * {max-height:1000px; overflow:visible}
}

/*** pulsating ring from https://jsfiddle.net/mandynicole/7xrKP/ *******/
.pulse:after {
    content:"";
    border:3px solid #00e6ac;
    -webkit-border-radius:30px;
    height:40px;
    width:40px;
    position:absolute;
    margin-left:-20px;
    margin-top:-20px;
    -webkit-animation:pulsate 1s ease-out;
    -webkit-animation-iteration-count:infinite;
    opacity:0.0
}
@-webkit-keyframes pulsate {
    0% {-webkit-transform:scale(0.1, 0.1); opacity:0.0}
    50% {opacity:1.0}
    100% {-webkit-transform:scale(1.2, 1.2); opacity:0.0}
}

/**** underline effect ***/
a:not(.btn):not(.noeffect) {position:relative}
a:not(.btn):not(.noeffect):hover {color:#26a69a}
a:not(.btn):not(.noeffect):hover:after {width:100%}
a:not(.btn):not(.noeffect):after {
  display:block;
  position:absolute;
  left:0;
  bottom:-1px;
  width:0;
  height:2px;
  background-color:#26a69a;
  content:"";
  transition:width 0.2s;
}

/**** modal ***/
.modal {
  position:fixed;
  z-index:9999;
  top:0;
  bottom:0;
  left:0;
  right:0;
  background-color:rgba(0,0,0,0.8);
  padding-top:20vh;
  transition:opacity 500ms;
  visibility:hidden;
  opacity:0;
}
.modal:target {visibility:visible; opacity:1}
.modal div {margin-left:auto; margin-right:auto}
.modal .close:not(.btn) {position:absolute; top:10px; right:10px; font-size:20px}
.modal .close {transition:all 200ms}

/*** tooltips from http://codepen.io/trezy/pen/Khnzy ***/
[data-tooltip] {position:relative}
[data-tooltip]:hover:after,[data-tooltip]:hover:before {display:block}
[data-tooltip]:before, [data-tooltip]:after {display:none; position:absolute; top:0}
[data-tooltip]:before {
  border-bottom:.6em solid black;
  border-bottom:.6em solid black;
  border-left:7px solid transparent;
  border-right:7px solid transparent;
  content:"";
  left:20px;
  margin-top:1em;
}
[data-tooltip]:after {
  background-color:rgba(0,0,0,0.8);
  border:4px solid rgba(0,0,0,0.8);
  border-radius:7px;
  color:white;
  content:attr(data-tooltip);
  left:0;
  margin-top:1.5em;
  padding:5px 15px;
  white-space:pre-wrap;
  width:100px;
}

/*** accordion ***/
.accordion>input ~ label:before {content:"▲ "; color:#ddd}
.accordion>input:checked ~ label:before {content:"▼ "; color:#ddd}
.accordion>input {display:none}
.accordion>input:checked ~ *:not(label) {
  max-height: 1000px !important;
  overflow:visible !important;
  -webkit-transition: max-height .3s ease-in;
  transition: max-height .3s ease-in;
}
.accordion>*:not(label) {
  max-height: 0;
  overflow: hidden;
  margin: 0;
  padding: 0;
  -webkit-transition: max-height .3s ease-out;
  transition: max-height .3s ease-out;
}
/* ... */

